crates/aven-check/tests/fixtures/check/valid/literal-union-member-binding.av
mode = "r"
pick = (m: @{"r", "w"}) => m

viaCall = pick(mode)
viaAssign : @{"r", "w"} = mode
