crates/aven-check/tests/fixtures/check/invalid/or-pattern-literal-non-exhaustive.av
Mode = @{"r", "w", "a"}

mode : Mode = "r"
result = mode ?>
  "r" | "w" => 1
